objects/Contracts_to_Contract_Docs_MtM__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Doc_Account__c</fullName>
        <formula>Contract_Docs__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Doc Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Doc_Legal_Review_Status__c</fullName>
        <formula>TEXT(Contract_Docs__r.Legal_Review_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Doc Legal Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Doc_Type__c</fullName>
        <formula>TEXT(Contract_Docs__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Doc Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Docs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Docs</label>
        <referenceTo>Contract_Document__c</referenceTo>
        <relationshipLabel>Contracts using this Contract Doc</relationshipLabel>
        <relationshipName>Contracts_to_Contract_Docs_MtMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Document_Name__c</fullName>
        <formula>Contract_Docs__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contracts_ABC__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Payer_Account__c</fullName>
        <formula>Contracts_ABC__r.Payer_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Payer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Program__c</fullName>
        <formula>Contracts_ABC__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Source_Opportunity__c</fullName>
        <formula>Contracts_ABC__r.Source_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Source Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts_ABC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Contract Docs on this Contract</relationshipLabel>
        <relationshipName>Contracts_to_Contract_Docs_MtMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracts_Renewal_Opportunity__c</fullName>
        <formula>Contracts_ABC__r.Contract_Renewal_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracts Renewal Opportunity</label>
        <type>Text</type>
    </fields>
    <label>Contracts to Contract Docs  MtM</label>
    <nameField>
        <label>Contracts to Contract Docs  MtM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts to Contract Docs  MtMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>